# theater

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Theater.cbp  Theater.layout  domains.cpp  domains.h  entities.h  main.cpp  theather.plantuml
.github/workflows/: ci.yml
doc/: Doxyfile
doc/html/: annotated.html  annotated_dup.js  basedomain_8h_source.html  capacity_8h_source.html  class_base_domain-members.html  class_base_domain.html  class_base_domain.js  class_capacity-members.html  class_capacity.html  class_capacity.js  class_date-members.html  class_date.html  class_date.js  class_email-members.html  class_email.html  class_email.js  class_id_code-members.html  class_id_code.html  class_id_code.js  class_name-members.html  class_name.html  class_name.js  class_participant-members.html  class_participant.html  class_participant.js  class_password-members.html  class_password.html  class_password.js  class_phone_number-members.html  class_phone_number.html  class_phone_number.js  class_play-members.html  class_play.html  class_play.js  class_play_type-members.html  class_play_type.html  class_play_type.js  class_rating-members.html  class_rating.html  class_rating.js  (+83 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_1.js  classes_4.js  classes_6.js  classes_7.js  classes_8.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  pages_0.js  searchdata.js
src/: CMakeLists.txt  basetest.h  main.cpp  tests.cpp
src/domains/: CMakeLists.txt  basedomain.h  basetest.h  domains.cpp  domains.h  state.h  tests.h
src/domains/capacity/: capacity.cpp  capacity.h  tests.cpp  tests.h
src/domains/date/: date.cpp  date.h  tests.cpp  tests.h
src/domains/email/: email.cpp  email.h  tests.h
src/domains/idcode/: idcode.cpp  idcode.h  tests.cpp  tests.h
src/domains/immatriculation/: immatriculation.cpp  immatriculation.h  tests.cpp  tests.h
src/domains/name/: name.cpp  name.h  tests.cpp  tests.h
src/domains/password/: password.cpp  password.h  tests.cpp  tests.h
src/domains/phonenumber/: phonenumber.cpp  phonenumber.h  tests.cpp  tests.h
src/domains/playtype/: playtype.cpp  playtype.h  tests.cpp  tests.h
src/domains/rating/: rating.cpp  rating.h  tests.h
src/domains/registration/: registration.cpp  registration.h  tests.h
src/domains/role/: role.cpp  role.h  tests.h
src/domains/time/: tests.h  time.cpp  time.h
src/entities/: CMakeLists.txt  basetest.h  entities.h  tests.h
src/entities/participant/: participant.h  tests.h
src/entities/play/: play.h  tests.h
src/entities/room/: room.h  tests.h
src/entities/session/: session.h  tests.h
src/presentation/: CMakeLists.txt  PageHandler.cpp  PageHandler.h  Pages.h
src/presentation/pages/: CMakeLists.txt  ErrorPage.cpp  InitPage.cpp  ItemsMenuPage.cpp  ListItemsPage.cpp  LogInPage.cpp  RegisterItemPage.cpp  RegisterPage.cpp  RegisterUserPage.cpp
src/presentation/pages/authenticated/: AuthenticatedInitPage.cpp  CMakeLists.txt  DeleteItemsPage.cpp  DeleteUserPage.cpp  EditItemsPage.cpp  IncludeItemsPage.cpp  ItemsMenuPage.cpp  PlayDisenrollmentPage.cpp  PlayEnrollmentPage.cpp  UpdateUserPage.cpp  ViewItemsPage.cpp  registrationPlayInUse.cpp  unregisterPlayInUser.cpp
src/services/: CMakeLists.txt  services.h
src/services/controllers/: CMakeLists.txt  ParticipantHandler.cpp  ParticipantHandler.h  PlayHandler.cpp  PlayHandler.h  RoomHandler.cpp  RoomHandler.h  SessionHandler.cpp  SessionHandler.h  controllers.h
src/services/db/: CMakeLists.txt  DBHandler.cpp  DBHandler.h
src/services/db/sql/: Capacities.sql  Participant.sql  Participants.sql  Play.sql  Plays.sql  Room.sql  Rooms.sql  Session.sql  Sessions.sql  Type.sql  participant.sql
src/services/interfaces/: CMakeLists.txt  ParticipantInterface.h  PlayInterface.h  RoomInterface.h  SessionInterface.h
